# dependabot-python-test

./: README.md  pyproject.toml
.github/: dependabot.yaml
dependabot_python_test/: __init__.py  hello.py
